{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 52,
  "lineage": "b355b1ea-7f10-f964-ecb0-29d35fcb7ea1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067e556a005e401c6",
            "association_id": "eipassoc-092339ce873f62b6d",
            "domain": "vpc",
            "id": "eipalloc-067e556a005e401c6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01f442ed158da0064",
            "private_dns": "ip-10-0-1-225.ec2.internal",
            "private_ip": "10.0.1.225",
            "public_dns": "ec2-54-172-174-175.compute-1.amazonaws.com",
            "public_ip": "54.172.174.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143883484348:internet-gateway/igw-00f582617ee032b79",
            "id": "igw-00f582617ee032b79",
            "owner_id": "143883484348",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0a657bbc8385b2bfd"
          },
          "dependencies": [
            "aws_vpc.iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067e556a005e401c6",
            "association_id": "eipassoc-092339ce873f62b6d",
            "connectivity_type": "public",
            "id": "nat-0fd72990c7cb9be04",
            "network_interface_id": "eni-01f442ed158da0064",
            "private_ip": "10.0.1.225",
            "public_ip": "54.172.174.175",
            "subnet_id": "subnet-000a57023fecaf266",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub",
            "aws_vpc.iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143883484348:route-table/rtb-02f9913576e8f5792",
            "id": "rtb-02f9913576e8f5792",
            "owner_id": "143883484348",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f582617ee032b79",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtpb"
            },
            "tags_all": {
              "Name": "rtpb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a657bbc8385b2bfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143883484348:route-table/rtb-019375239d0c299c5",
            "id": "rtb-019375239d0c299c5",
            "owner_id": "143883484348",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd72990c7cb9be04",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtpr"
            },
            "tags_all": {
              "Name": "rtpr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a657bbc8385b2bfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.pub",
            "aws_vpc.iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtapb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6ca9b2a974f5e1f",
            "route_table_id": "rtb-02f9913576e8f5792",
            "subnet_id": "subnet-000a57023fecaf266"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtpb",
            "aws_subnet.pub",
            "aws_vpc.iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtapriv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6a8870aeb079880",
            "route_table_id": "rtb-019375239d0c299c5",
            "subnet_id": "subnet-0b6f62f19e5be554f"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.rtpr",
            "aws_subnet.priv",
            "aws_subnet.pub",
            "aws_vpc.iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143883484348:subnet/subnet-0b6f62f19e5be554f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6f62f19e5be554f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143883484348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv"
            },
            "tags_all": {
              "Name": "priv"
            },
            "vpc_id": "vpc-0a657bbc8385b2bfd"
          },
          "dependencies": [
            "aws_vpc.iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143883484348:subnet/subnet-000a57023fecaf266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000a57023fecaf266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "143883484348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub"
            },
            "tags_all": {
              "Name": "pub"
            },
            "vpc_id": "vpc-0a657bbc8385b2bfd"
          },
          "dependencies": [
            "aws_vpc.iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iac",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143883484348:vpc/vpc-0a657bbc8385b2bfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6fbfa0120dafc8e",
            "default_route_table_id": "rtb-0e43e72d6c93573cc",
            "default_security_group_id": "sg-0a2f78248728ec934",
            "dhcp_options_id": "dopt-077a6058f911d2164",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a657bbc8385b2bfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e43e72d6c93573cc",
            "owner_id": "143883484348",
            "tags": {
              "Name": "iac"
            },
            "tags_all": {
              "Name": "iac"
            }
          }
        }
      ]
    }
  ]
}